# AI-Music-post-production-engineer

./: PROJECT_INFO.md  README.md  RECORDING_GUIDE.md  UPDATE_LOG.md  USAGE.md  VERSION.md  install_pyworld.bat  launch.bat  main.py  pyproject.toml  requirements.txt  run_app.py  start.ps1  system_check.py  test_transcription.py  智能启动.bat
